<resources>
    <string name="app_name">Y Discount</string>
    <string name="action_settings">Options</string>
    <string name="buttonSigup">S\'inscrire</string>
    <string name="cr_e_le_compte">Crée le compte</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="my_app_id">kotlins4-eynak</string>
    <string name="profil">Profil</string>
    <string name="recherche">Recherche</string>
    <string name="information">Information</string>
    <string name="accueil">Accueil</string>
    <string name="description">Description</string>
    <string name="crer_un_post">Créer un post</string>
    <string name="cr_ation_d_un_nouveau_post">Création d\'un nouveau post</string>
    <string name="titre">Titre</string>
</resources>